# llvm-tutorial-standalone

./: .travis.yml  LICENSE  README.md  tutorial.cabal
cbits/: lib.c  lib.h
src/: Codegen.hs  FFI.hs  Main.hs
