name:                tutorial
version:             0.2.0.0
license:             MIT
category:            Compilers
description:         
synopsis:            
license-file:        LICENSE
author:              Stephen Diehl
maintainer:          stephen.m.diehl@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable main
  build-depends:       
    base                 >= 4.6   && <4.10,
    mtl                  >= 2.2,
    containers           >= 0.5,

    llvm-general         >= 3.5.0.0 && < 3.5.2.0,
    llvm-general-pure    == 3.5.0.*

  other-modules:
    Codegen
    JIT

  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             Main.hs
